[tool.poetry]
name = "momma"
version = "0.1.0"
description = "A simple Python package."
authors = ["Esrom <esromquarterman@gmail.com>"]

license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add additional dependencies here, e.g.:
# requests = "^2.25.1"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

